# opencv-experiments

./: .gitignore  CMakeLists.txt  README.md  make_run_face_detect.sh  make_run_match_images.sh  make_run_show_image.sh
res/classifiers/: haarcascade_smile.xml  lbpcascade_frontalface.xml  lbpcascade_profileface.xml  lbpcascade_silverware.xml
src/: face_detect.cpp  match_images.cpp  show_image.cpp
